syntax = "proto3";

package pb;

service Event {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Get    (GetRequest)    returns (GetResponse)    {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc List   (ListRequest)   returns (ListResponse)   {}
}

message eventObj {
  bytes  id   = 1;
  string name = 2;
}

message CreateRequest {
  bytes    tenant_id = 1;
  eventObj event     = 2;
}

message CreateResponse {
  bytes id = 1;
}

message GetRequest {
  bytes tenant_id = 1;
  bytes id        = 2;
}

message GetResponse {
  eventObj event = 1;
}

message UpdateRequest {
  bytes    tenant_id = 1;
  eventObj event     = 2;
}

message UpdateResponse {

}

message DeleteRequest {
  bytes tenant_id = 1;
  bytes id        = 2;
}

message DeleteResponse {

}

message ListRequest {
  bytes tenant_id = 1;
}

message ListResponse {
  repeated eventObj events = 1;
}
